Fixed a whitespace css bug on landing page. Added some comments to clarify where variables are originating from on indexJS, and navAndFlashEjs files. Added an if else statement to show or hide login register or logout depending on whether or not user is currently logged in.

--- a/public/landing.css
+++ b/public/landing.css
@@ -34,7 +34,7 @@ header {
   line-height: 145%;
   width: 70%;
   margin-left: 15%;
-  margin-bottom: 5%;
+  margin-bottom: 6%;
   font-size: 103%;
 }
 
@@ -86,6 +86,7 @@ header {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   padding-bottom: 0;
+  padding-top: 0;
 }
 
 .imageGrid figure {
